# telegram-typefully-bot

./: .cursorrules  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  setup.sh
.github/workflows/: docker-publish.yml
.sqlx/: query-07db01fcd035a335738a3b19786fc8caa0a40e1d6c573eff908c43ea7396a25f.json  query-251f48aacccbf3cfddf13417caa1d5260dfa90dc58a8565043ad7084ab584dc2.json  query-2cbef5cf90c64397f5323a94b15642bf1a9900eb721de1be978c9087c87ecbd0.json  query-779e74ea422ea02a398374adae0076af62e2744d1b46ec3ee21b504ba0cf6412.json  query-88457f2cb0cb0e3b32bd3c23fa6f34c5bf94c363c94651b9e4789c7df3540a1d.json  query-b37a6bc4d8beee70180580b9dcc8469b6f866076c7d1df60c66430b3ad67386f.json  query-b9807531ec6ff169d03a387b8fb3316e4bfb91178d777881195a739c890db998.json  query-c07428fd7efdce0e5960f8752b3433aff62850814e225de329df40896f40e54a.json  query-c3ba783f70cdee1183607d43e86a135cfbfd3ec7e2897aa935eb5c736beb0cb3.json  query-e96fe12f9b2c7d7b87a8cd979b05edfd55df7bf4122cb3408c9ddfbdf4bd5275.json
migrations/: 20240101000000_initial.sql  20240101000001_add_usage_tracking.sql  20240101000002_add_deleted_users.sql  20240101000003_add_rewrite_setting.sql
src/: actions.rs  ai.rs  commands.rs  db.rs  main.rs
