[package]
name = "telegram-typefully-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", default-features = false, features = [
  "ctrlc_handler",
  "macros",
  "rustls",
] }
dotenv = "0.15"

teloxide-core = { version = "0.10.1", default-features = false, features = [
  "rustls",
] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
either = { version = "1.13.0", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
openai-api-rs = { version = "5.2.0", default-features = false, features = [
  "rustls",
] }
anyhow = "1.0.93"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "time"] }
time = { version = "0.3", features = ["serde"] }
reqwest = "0.12.9"
serde_json = "1.0.133"
